--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html, body {
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: black;
+    background-color: white;
     font-size: 1rem;
     color: white;
 }
