--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html, body {
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: white;
+    background-color: black;
     font-size: 1rem;
     color: white;
 }
@@ -40,4 +40,76 @@ noscript {
 
 .hidden {
     display: none;
+}
+
+article {
+    padding: 50px;
+}
+
+.rangeSlider {
+    position: relative;
+    height: 1rem;
+    width: 100px;
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    pointer-events: none;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    border-radius: 100vh;
+    background-color: lightgray;
+}
+
+input[type=range].min, input[type=range].max {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+input[type=range].min {
+    z-index: 1;
+    background-color: transparent;
+}
+
+@supports not (-moz-appearance: none) {
+    input[type=range]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        pointer-events: all;
+        width: 1rem;
+        height: 1rem;
+        background: gray;
+        cursor: ew-resize;
+        border-radius: 50%;
+        border: 2px solid black;
+        box-shadow: -50vw 0 0 calc(50vw - 0.5rem) blue;
+    }
+
+    input[type=range].min::-webkit-slider-thumb {
+        box-shadow: -50vw 0 0 calc(50vw - 0.5rem) lightgray;
+    }
+}
+
+@supports (-moz-appearance: none) {
+    input[type=range]::-moz-range-thumb {
+        pointer-events: all;
+        width: 1rem;
+        height: 1rem;
+        background: black;
+        cursor: ew-resize;
+        border-radius: 0;
+        border: none;
+    }
+
+    input[type=range]::-moz-range-progress {
+        height: 100%;
+        background-color: blue;
+    }
+
+    input[type=range].min::-moz-range-progress {
+        background-color: lightgray;
+    }
 }
