--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+    --toggle-size: 50px;
+    --menu-size: 250px;
+    --menu-popout: 0px;
+    --transition-time: 0.5s;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -21,6 +28,7 @@ html, body {
     height: 100%;
     position: relative;
     background-color: black;
+    overflow: hidden;
 }
 
 body > * {
@@ -37,12 +45,66 @@ noscript {
     color: black;
 }
 
-article {
-    width: calc(200px + 2rem);
-    padding: 1rem;
-    line-height: 0;
-    background-color: rgba(255, 255, 255, 0.25);
+#menu {
+    width: var(--menu-size);
+    left: calc(var(--menu-popout) - var(--menu-size));
     border-right: 1px solid black;
+    line-height: 0;
+}
+
+#menu div {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+}
+
+#toggle {
+    width: calc(var(--toggle-size) / 2);
+    height: var(--toggle-size);
+    top: 50%;
+    left: var(--menu-popout);
+    transform: translateY(-50%);
+    background-color: white;
+    border: 1px solid black;
+    border-left: none;
+    border-top-right-radius: 100vw;
+    border-bottom-right-radius: 100vw;
+    display: flex;
+    align-items: center;
+}
+
+#menu, #toggle {
+    background-color: rgba(255, 255, 255, 0.25);
+    transition: left var(--transition-time);
+}
+
+@media screen and (orientation: portrait) {
+    #menu {
+        width: 100%;
+        height: var(--menu-size);
+        left: unset;
+        bottom: calc(var(--menu-popout) - var(--menu-size));
+        justify-content: center;
+        display: flex;
+        border-right: none;
+        border-top: 1px solid black;
+    }
+
+    #menu div {
+        width: var(--menu-size);
+    }
+
+    #toggle {
+        left: unset;
+        top: unset;
+        right: 50%;
+        bottom: var(--menu-popout);
+        transform: translate(50%, 25%) rotate(-90deg);
+    }
+
+    #menu, #toggle {
+        transition: bottom var(--transition-time);
+    }
 }
 
 span {
@@ -53,7 +115,7 @@ span {
     font-weight: bold;
 }
 
-span.value {
+span.value {  
     float: right;
 }
 
@@ -62,7 +124,7 @@ span.value span {
     display: inline;
 }
 
-.doubleRange {
+.doubleSlider {
     position: relative;
     height: 1rem;
     width: 100%;
