--- a/style.css
+++ b/style.css
@@ -91,8 +91,7 @@ noscript {
 }
 
 #handle::after {
-    top: unset;
-    bottom: 30%;
+    top: 50%;
     transform: skewX(calc(var(--handle-skew) * -1));
 }
 
