--- a/style.css
+++ b/style.css
@@ -91,8 +91,7 @@ noscript {
 }
 
 #handle::after {
-    top: calc(30% + 20%);
-    transform: skewX(calc(var(--handle-skew) * -1));
+    transform: translateY(100%) skewX(calc(var(--handle-skew) * -1));
 }
 
 #menu, #handle {
